--- a/Unit4Style.CSS
+++ b/Unit4Style.CSS
@@ -1,6 +1,3 @@
-
-
-
 body {
 	background-image: url("thornandpetalbar1.jpg");
 	background-repeat: no-repeat;
@@ -10,6 +7,7 @@ body {
 	padding-bottom: 0px;
 	border: 0px;
 }
+
 
 h1 {
 	text-align: left;
@@ -25,20 +23,19 @@ h1 {
 
 p {
 	font-family: 'Indie Flower', cursive;
-	color: #72CE5F;
+	color: #FFFFFF;
 	font-size: 4.8em;
 	font-weight: bold;
-	text-indent: 200px;
-	padding-top: 240px;
-	margin: 400px;
+	text-indent: 250px;
+	padding-top: 220px;
+	margin: 460px;
 }
 
 #one {
 	font-family: 'Indie Flower', cursive;
-	color: #72CE5F;
-	font-size: 5em;
+	color: #FFFFFF;
+	font-size: 4.8em;
 	font-weight: bold;
-	text-indent: 225px;
-	padding-top: -1em;
-	margin: 425px;
+	text-indent: 300px;
+	padding-top: 150px;
 }
