--- a/Unit4StyleOld.CSS
+++ b/Unit4StyleOld.CSS
@@ -1,8 +1,8 @@
 body {
 	background-image: url("thornandpetalbar1.jpg");
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	background-color: #3D3D31;
+	background-size: 100% 95%;
+	background-color: #5A1311;
 	display: block;
 	padding-bottom: 0px;
 	border: 0px;
@@ -12,16 +12,16 @@ body {
 h1 {
 	text-align: left;
 	margin: 150px;
-	padding-top: 100px;
-	font-size: 18em;
+	padding-top: 75px;
+	font-size: 17.5em;
 	font-family: 'Lobster', cursive;
 	color: #5A1311;
 	margin-bottom: -.5em;
-	text-shadow: -2px 2px 2px #999;
+	text-shadow: -3px 3px 3px #999;
 }
 
 
-p {
+#one {
 	font-family: 'Indie Flower', cursive;
 	color: #FFFFFF;
 	font-size: 4.8em;
@@ -31,11 +31,14 @@ p {
 	margin: 460px;
 }
 
-#one {
+#two {
 	font-family: 'Indie Flower', cursive;
 	color: #FFFFFF;
 	font-size: 4.8em;
 	font-weight: bold;
 	text-indent: 300px;
 	padding-top: 150px;
+	text-align: left;
 }
+
+
