--- a/Unit4Style.CSS
+++ b/Unit4Style.CSS
@@ -33,7 +33,7 @@ p {
 
 
 a {
-	font-family: 'Indie Flower, cursive;
+	font-family: 'Indie Flower', cursive;
 	color: #FFFFFF;
 	font-size: 1em;
 	margin-left: 680px;
@@ -42,7 +42,7 @@ a {
 }
 
 div-footer {
-	font-family: 'Indie Flower, cursive;
+	font-family: 'Indie Flower', cursive;
 	color: #FFFFFF;
 	font-size: 2.4em;
 	font-weight: bold;
