--- a/thornandpetal.css
+++ b/thornandpetal.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("thornandpetalbar1.jpg");
+	background-image: url("ThornandPetalBar1.jpg");
 	background-repeat: no-repeat;
 	background-size: 100% 95%;
 	background-color: #5A1311;
